have repeat for dataset working, messy

--- a/remake/double/toy2a_multiscale_model_fitting_2inputs.ipynb
+++ b/remake/double/toy2a_multiscale_model_fitting_2inputs.ipynb
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,48 @@
       "epoch 100, training loss 0.06568051129579544, validation loss 0.05465284362435341\n",
       "(--> new model saved @ epoch 100)\n",
       "epoch 200, training loss 0.05258018895983696, validation loss 0.05452724173665047\n",
-      "(--> new model saved @ epoch 200)\n"
+      "(--> new model saved @ epoch 200)\n",
+      "epoch 300, training loss 0.04393968731164932, validation loss 0.054474808275699615\n",
+      "(--> new model saved @ epoch 300)\n",
+      "epoch 400, training loss 0.057663459330797195, validation loss 0.05446845665574074\n",
+      "(--> new model saved @ epoch 400)\n",
+      "epoch 500, training loss 0.04687037318944931, validation loss 0.054490312933921814\n",
+      "x_prev shape =  torch.Size([10, 2])\n",
+      "y_pred shape =  torch.Size([10, 1, 33])\n",
+      "steps =  [0, 15, 31, 47, 63, 79, 95, 111, 127, 143, 159, 175, 191, 207, 223, 239, 255, 271, 287, 303, 319, 335, 351, 367, 383, 399, 415, 431, 447, 463, 479, 495, 511]\n",
+      "len steps =  33\n",
+      "mse_lowest =  0.09591629\n",
+      "mse_less=  0.10451026\n",
+      "train_data shape =  torch.Size([100, 500, 1])\n",
+      "model loaded:  model_L1_D32_noise0.pt\n",
+      "don't train =  False\n",
+      "train_data before dataset torch.Size([100, 500, 1])\n",
+      "step_size =  32\n",
+      "x_end_idx =  33\n",
+      "y_start_idx =  64\n",
+      "y_end_idx =  225\n",
+      "range(0, 33, 32)\n",
+      "self.train_x shape =  torch.Size([100, 2])\n",
+      "train_ys shape =  torch.Size([100, 6, 1])\n",
+      "train_x after torch.Size([100, 2])\n",
+      "self.n_dim=  2\n",
+      "dataset.n_dim =  2\n",
+      "epoch 100, training loss 0.053809236735105515, validation loss 0.05682147666811943\n",
+      "(--> new model saved @ epoch 100)\n",
+      "epoch 200, training loss 0.062435660511255264, validation loss 0.0562012679874897\n",
+      "(--> new model saved @ epoch 200)\n",
+      "epoch 300, training loss 0.0506637878715992, validation loss 0.05614548176527023\n",
+      "(--> new model saved @ epoch 300)\n",
+      "epoch 400, training loss 0.05367603152990341, validation loss 0.05609600991010666\n",
+      "(--> new model saved @ epoch 400)\n",
+      "epoch 500, training loss 0.056556232273578644, validation loss 0.055853649973869324\n",
+      "(--> new model saved @ epoch 500)\n",
+      "x_prev shape =  torch.Size([10, 2])\n",
+      "y_pred shape =  torch.Size([10, 1, 17])\n",
+      "steps =  [0, 31, 63, 95, 127, 159, 191, 223, 255, 287, 319, 351, 383, 415, 447, 479, 511]\n",
+      "len steps =  17\n",
+      "mse_lowest =  0.09591629\n",
+      "mse_less=  0.16086838\n"
      ]
     }
    ],
@@ -1291,6 +1332,215 @@
     "plt.plot(val_dict[str(current_size*2)][:,1:, i*current_size:(i+1)*current_size, i*current_size:(i+1)*current_size][0,:,0,1], label = \"Truth\")\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63\n",
+      "n_repeats =  7\n",
+      "points_needed =  63\n",
+      "torch.Size([100, 500, 1])\n",
+      "torch.Size([100, 63, 1])\n",
+      "torch.Size([700, 63, 1])\n",
+      "i =  0\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  1\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  2\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  3\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  4\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  5\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "i =  6\n",
+      "train_data_700[i*100:(i+1)*100, :,:] shape =  torch.Size([100, 63, 1])\n",
+      "traind_data_100[:,i*63:(i+1)*63,:] shape =  torch.Size([100, 63, 1])\n",
+      "torch.Size([700, 63, 1])\n",
+      "step_size =  8\n",
+      "self.train_x shape =  torch.Size([700, 2])\n",
+      "train_ys shape =  torch.Size([700, 6, 1])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-53-520ed3970dfc>:46: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.train_x = torch.tensor(train_data[:, x_idx:x_end_idx:step_size, :]).float().to(self.device)\n",
+      "<ipython-input-53-520ed3970dfc>:49: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.train_ys = torch.tensor(train_data[:, y_start_idx:y_end_idx:step_size, :]).float().to(self.device)\n",
+      "<ipython-input-53-520ed3970dfc>:51: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.val_x = torch.tensor(val_data[:, x_idx:x_end_idx:step_size, :]).float().to(self.device)\n",
+      "<ipython-input-53-520ed3970dfc>:53: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.val_ys = torch.tensor(val_data[:, y_start_idx:y_end_idx:step_size, :]).float().to(self.device)\n",
+      "<ipython-input-53-520ed3970dfc>:55: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.test_x = torch.tensor(test_data[:, 0, :]).float().to(self.device)\n",
+      "<ipython-input-53-520ed3970dfc>:56: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  self.test_ys = torch.tensor(test_data[:, 1:, :]).float().to(self.device)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#practing to make the dataset class have more points if possible\n",
+    "\n",
+    "import torch\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "class DataSet:\n",
+    "    def __init__(self, train_data, val_data, test_data, dt, step_size, n_forward):\n",
+    "        \"\"\"\n",
+    "        :param train_data: array of shape n_train x train_steps x input_dim\n",
+    "                            where train_steps = max_step x (n_steps + 1)\n",
+    "        :param val_data: array of shape n_val x val_steps x input_dim\n",
+    "        :param test_data: array of shape n_test x test_steps x input_dim\n",
+    "        :param dt: the unit time step\n",
+    "        :param step_size: an integer indicating the step sizes\n",
+    "        :param n_forward: number of steps forward\n",
+    "        \"\"\"\n",
+    "        n_train, train_steps, n_dim = train_data.shape\n",
+    "        n_val, val_steps, _ = val_data.shape\n",
+    "        n_test, test_steps, _ = test_data.shape\n",
+    "        assert step_size*n_forward+1 <= train_steps and step_size*n_forward+1 <= val_steps\n",
+    "\n",
+    "        # params\n",
+    "        self.dt = dt\n",
+    "        self.n_dim = n_dim *2\n",
+    "        self.step_size = step_size\n",
+    "        print(\"step_size = \", step_size)\n",
+    "        self.n_forward = n_forward\n",
+    "        self.n_train = n_train\n",
+    "        self.n_val = n_val\n",
+    "        self.n_test = n_test\n",
+    "        self.n_input_points = 2\n",
+    "\n",
+    "        # device\n",
+    "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "\n",
+    "        # data\n",
+    "        x_idx = 0\n",
+    "        x_end_idx = x_idx + step_size*(self.n_input_points-1)+1\n",
+    "        y_start_idx = step_size*(self.n_input_points)\n",
+    "        y_end_idx = y_start_idx + step_size*n_forward + 1\n",
+    "\n",
+    "\n",
+    "        self.train_x = torch.tensor(train_data[:, x_idx:x_end_idx:step_size, :]).float().to(self.device)\n",
+    "        self.train_x = torch.flatten(self.train_x, start_dim = 1)\n",
+    "        print(\"self.train_x shape = \", self.train_x.shape)\n",
+    "        self.train_ys = torch.tensor(train_data[:, y_start_idx:y_end_idx:step_size, :]).float().to(self.device)\n",
+    "        print(\"train_ys shape = \", self.train_ys.shape)\n",
+    "        self.val_x = torch.tensor(val_data[:, x_idx:x_end_idx:step_size, :]).float().to(self.device)\n",
+    "        self.val_x = torch.flatten(self.val_x, start_dim = 1)\n",
+    "        self.val_ys = torch.tensor(val_data[:, y_start_idx:y_end_idx:step_size, :]).float().to(self.device)\n",
+    "        # self.val_ys = torch.flatten(self.val_ys, start_dim = 1)\n",
+    "        self.test_x = torch.tensor(test_data[:, 0, :]).float().to(self.device)\n",
+    "        self.test_ys = torch.tensor(test_data[:, 1:, :]).float().to(self.device)\n",
+    "\n",
+    "        \n",
+    "n_forward = 5\n",
+    "max_step = n_forward + 2\n",
+    "n_steps = 8\n",
+    "print(max_step *(n_steps + 1))\n",
+    "\n",
+    "points_needed = max_step *(n_steps + 1)\n",
+    "n_repeats = int(500/points_needed)\n",
+    "traind_data_100 = torch.flatten(train_dict['1'], 2)\n",
+    "n_points, n_timesteps, n_dim = traind_data_100.shape\n",
+    "print(\"n_repeats = \",n_repeats )\n",
+    "print(\"points_needed = \", points_needed)\n",
+    "print(traind_data_100.shape)\n",
+    "print(torch.flatten(train_dict['1'], 2)[:,:points_needed].shape)\n",
+    "\n",
+    "#need to reform training data to be 700,63,1\n",
+    "train_data_700 = torch.zeros((n_points*n_repeats, points_needed, n_dim))\n",
+    "print(train_data_700.shape)\n",
+    "for i in range(n_repeats):\n",
+    "#     pass\n",
+    "    print(\"i = \", i)\n",
+    "    print(\"train_data_700[i*100:(i+1)*100, :,:] shape = \", train_data_700[i*n_points:(i+1)*n_points, :,:].shape)\n",
+    "    print(\"traind_data_100[:,i*63:(i+1)*63,:] shape = \", traind_data_100[:,i*points_needed:(i+1)*points_needed,:].shape)\n",
+    "    \n",
+    "    train_data_700[i*n_points:(i+1)*n_points, :,:] = traind_data_100[:,i*points_needed:(i+1)*points_needed,:]\n",
+    "    \n",
+    "print(train_data_700.shape)\n",
+    "dataset = DataSet(train_data_700, torch.flatten(train_dict['1'], 2), torch.flatten(train_dict['1'], 2), 1, n_steps, n_forward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_data_repeats shape =  torch.Size([1700, 28, 1])\n",
+      "step_size =  3\n",
+      "x_end_idx =  4\n",
+      "y_start_idx =  6\n",
+      "y_end_idx =  22\n",
+      "range(0, 4, 3)\n",
+      "self.train_x shape =  torch.Size([1700, 2])\n",
+      "train_ys shape =  torch.Size([1700, 6, 1])\n",
+      "torch.Size([1700, 2])\n",
+      "torch.Size([170, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import utils_time2 as utils\n",
+    "\n",
+    "dataset =  utils.make_dataset_max_repeat(torch.flatten(train_dict['1'], 2), torch.flatten(val_dict['1'], 2), torch.flatten(val_dict['1'], 2), dt, \n",
+    "                                         step_size=3, n_forward=5,n_input_points=2)\n",
+    "\n",
+    "print(dataset.train_x.shape)\n",
+    "print(dataset.val_x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
