--- a/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
+++ b/multiscale_HiTS/scripts/multiscale_HiTS_exp/model_training.ipynb
@@ -25,7 +25,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ResNet'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-797779901fa6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mResNet\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ResNet'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import sys\n",
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,39 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(75, 500, 16)\n",
-      "(15, 500, 16)\n",
-      "(10, 500, 16)\n",
-      "75\n",
-      "15\n",
-      "10\n",
-      "[[0.85528338 0.93059355 0.95398581 ... 0.86627203 0.88805383 0.85528332]\n",
-      " [0.85501027 0.9302972  0.95368212 ... 0.86599588 0.88777113 0.85501063]\n",
-      " [0.85419363 0.92940885 0.95277166 ... 0.86516911 0.88692319 0.85419393]\n",
-      " ...\n",
-      " [0.85419363 0.92940885 0.95277166 ... 0.86516911 0.88692319 0.85419393]\n",
-      " [0.85501027 0.9302972  0.95368212 ... 0.86599588 0.88777113 0.85501063]\n",
-      " [0.85528338 0.93059355 0.95398581 ... 0.86627203 0.88805383 0.85528332]]\n",
-      "step_size*n_forward+1 =  6\n",
-      "step_size*n_forward+1 =  6\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\16kat\\anaconda3\\lib\\site-packages\\torch\\cuda\\__init__.py:52: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  ..\\c10\\cuda\\CUDAFunctions.cpp:100.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load data\n",
     "data = np.load(os.path.join(data_dir, \"train_data.npy\"))#inputs_2x2.npy\"))#'train_noise{}.npy'.format(noise)))\n",
@@ -508,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
