--- a/scripts/MrCAE_toy1_debugging_next_layer.ipynb
+++ b/scripts/MrCAE_toy1_debugging_next_layer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,28 @@
     "model_path = '../model/toy1_space/'\n",
     "result_path = '../result/toy1_space/' \n",
     "\n",
-    "dataset = net.MultiScaleDynamicsDataSet(data_path, n_levels=3)"
+    "dataset = net.MultiScaleDynamicsDataSet(data_path, n_levels=3)\n",
+    "\n",
+    "train_data, val_data, test_data = dataset.obtain_data_at_current_level(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(500, 127, 127)\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset.data.shape\n",
+    "data = np.load(data_path)\n",
+    "print(data.shape)"
    ]
   },
   {
