--- a/scripts/toy2a_multiscale_model_fitting.ipynb
+++ b/scripts/toy2a_multiscale_model_fitting.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -103,14 +103,17 @@
       "i =  2\n",
       "Transforming\n",
       "reshape to print\n",
-      "dict_keys(['8', '4', '2', '1'])\n"
+      "dict_keys(['8', '4', '2', '1'])\n",
+      "torch.Size([100, 500, 1, 1])\n"
      ]
     }
    ],
    "source": [
     "\n",
     "train_dict = utils.make_dict_all_sizes(train_data)\n",
-    "val_dict = utils.make_dict_all_sizes(val_data)"
+    "val_dict = utils.make_dict_all_sizes(val_data)\n",
+    "\n",
+    "print(train_dict['1'].shape)"
    ]
   },
   {
@@ -1079,7 +1082,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1093,7 +1096,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
